--- a/jaml/DOM/domenvio.html
+++ b/jaml/DOM/domenvio.html
@@ -22,7 +22,7 @@
         <br>
         <br>
         <br>
-        Seleccione unas dimensiones para la caja:
+        <p>Seleccione unas dimensiones para la caja:</p>
         <br>
         <br>
         <input type="radio" name="caja" value="diminutas">Diminutas
