--- a/jaml/Filtro/filtro.html
+++ b/jaml/Filtro/filtro.html
@@ -10,38 +10,49 @@
 
 <body>
     <ul class="uls">
-        <li><a href="#">Todos</a></li>
-        <li><a href="#">Negro</a></li>
-        <li><a href="#">Amarillo</a></li>
-        <li><a href="#">Rosa</a></li>
+        <li><a href="#all">Todos</a></li>
+        <li><a href="#black">Negro</a></li>
+        <li><a href="#yellow">Amarillo</a></li>
+        <li><a href="#pink">Rosa</a></li>
     </ul>
 
     <div class="container">
-        <div class="color negro"></div>
-        <div class="color amarillo"></div>
-        <div class="color amarillo"></div>
-        <div class="color rosa"></div>
-        <div class="color negro"></div>
-        <div class="color negro"></div>
-        <div class="color rosa"></div>
-        <div class="color amarillo"></div>
-        <div class="color negro"></div>
-        <div class="color amarillo"></div>
-        <div class="color amarillo"></div>
-        <div class="color rosa"></div>
-        <div class="color negro"></div>
-        <div class="color negro"></div>
-        <div class="color rosa"></div>
-        <div class="color amarillo"></div>
+        <div class="color black"></div>
+        <div class="color yellow"></div>
+        <div class="color yellow"></div>
+        <div class="color pink"></div>
+        <div class="color black"></div>
+        <div class="color black"></div>
+        <div class="color pink"></div>
+        <div class="color yellow"></div>
+        <div class="color black"></div>
+        <div class="color yellow"></div>
+        <div class="color yellow"></div>
+        <div class="color pink"></div>
+        <div class="color black"></div>
+        <div class="color black"></div>
+        <div class="color pink"></div>
+        <div class="color yellow"></div>
     </div>
 
     <script>
-        document.querySelectorAll(".color").forEach(a => {
-            a.addEventListener("click", (a) => {
-                a.querySelector("Todos") =
-                    tr.style.backgroundColor = "pink"
-            })
-        })
+        const links = document.querySelectorAll("a");
+        links.forEach(link => {
+            link.addEventListener("click", (e) => {
+                const attr = e.target.getAttribute("href");
+                const attrAux = attr.substring(1);
+                document.querySelectorAll(".color").forEach(color => {
+                    if (color.classList.contains(attrAux)) {
+
+                        console.log('11111')
+                        color.classList.remove("invisible")
+                    } else {
+                        console.log('22222')
+                        color.classList.add("invisible");
+                    }
+                })
+            });
+        });
     </script>
 </body>
 
